<resources>
    <string name="app_name">DWARFSTAR STUDIOS</string>
    <string name="app_tag">The Next Gen Technology</string>

    <string name="title_activity_first_page">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name*</string>
    <string name="call">Call Us</string>
    <string name="done">Done</string>
    <string name="call_text">Call our Customer care services and convey your queries.We will try to solve them as soon as possible.</string>
    <string name="mail_us">Mail Us</string>
    <string name="mail_text">Mail us your queries.We will try to solve them as soon as possible.</string>


    <string name="order_date">Date</string>
    <string name="order_time">Time</string>
    <string name="remove_cart">Remove </string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="view_details">View Details</string>
    <string name="place_order">Place Order</string>
    <string name="shop_more">Shop More</string>
    <string name="cancel">Cancel</string>

    <string name="cat_desc_content">Description_content</string>
    <string name="cat_desc">Description</string>
    <string name="cat_name">Category Name</string>
    <string name="ar_selfie">AR SELFIE STICK</string>
    <string name="ar_card">AR VISITING CARD</string>

    <string name="price">Price*</string>
    <string name="gender">Gender*</string>
    <string name="proceed">Proceed</string>
    <string name="old_password">Old Password*</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="email">Email Id*</string>
    <string name="new_password">New Password*</string>
    <string name="change_password">Change Password ></string>
    <string name="enter_new_password">Enter new password</string>
    <string name="Username">Username</string>
    <string name="location">Location*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="my_orders">My Orders</string>
    <string name="dob">DOB*</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email_id">Email Id</string>
    <string name="view_all_orders">VIEW ALL ORDERS</string>
    <string name="help_centre">Help Centre</string>
    <string name="go_to_centre">GO TO CENTRE</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="go_to_wishlist">GO TO WISHLIST</string>
    <string name="my_profile">My Profile</string>
    <string name="go_to_profile">GO TO PROFILE</string>
    <string name="logout">Logout</string>

    <string name="template">Template 1</string>
    <string name="template_brand">Template Brand</string>

    <string name="save">Save</string>
    <string name="cart">Cart</string>
    <string name="website">Website</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="linked_in">LinkedIn</string>
    <string name="designation">Designation*</string>
    <string name="profession">Profession*</string>
    <string name="wishlist">Wishlist</string>
    <string name="add_cart">Cart</string>
    <string name="buy">Buy</string>


    <string name="get_now">GET NOW+</string>
    <string name="shop_now">SHOP+</string>

    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="Name">Name*</string>
    <string name="phone">Mobile No.*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="address">Address(House No., Building, Street, Area)*</string>
    <string name="locality">Locality/Town*</string>
    <string name="city">City/District*</string>
    <string name="state">State*</string>
    <string name="type_address">Type of Address*</string>
    <string name="home">Home</string>
    <string name="office">Office/Commercial</string>
    <string name="default_address">Make this my default address</string>
    <string name="default_web_client_id" translatable="false">265565191534-5tss8r08gpe0q41ie9mmrgdv5lp7i71e.apps.googleusercontent.com</string>
    <string name="prod_brand">Brand</string>
    <string name="prod_name">Name</string>
    <string name="prod_price">Price</string>
    <string name="prod_mrp">mrp</string>
    <string name="prod_discount">disc</string>
    <string name="mob_number">Mobile Number</string>
    <string name="email1">Email Id*</string>
    <string name="adres">My Address</string>
    <string name="change_pswrd">Change Password</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile</string>
    <string name="new_user_sign_up">New User Sign Up</string>
    <string name="please_add_your_passport_size_photo">Please add your passport size photo</string>
    <string name="your_passport_size_photo">Your passport size photo</string>
    <string name="click_here_to_add_a_passport_size_photo">click here to add a passport size photo</string>
    <string name="description">Description*</string>
    <string name="product_name">Product Name</string>
    <string name="description1">Description</string>

    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay">PAY</string>


</resources>
