<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#0824C0"
        >

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="#0824C0"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="150dp"/>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/edittext1"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:paddingStart="15dp"
        android:fontFamily="serif"
        android:inputType="text"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/edittext2"
        android:fontFamily="serif"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/gender"
        android:paddingStart="15dp"
        android:inputType="text"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/edittext3"
        android:fontFamily="serif"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/mobile_no"
        android:paddingStart="15dp"
        android:inputType="text"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/edittext4"
        android:fontFamily="serif"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_id"
        android:paddingStart="15dp"
        android:inputType="text"/>


    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/edittext5"
        android:fontFamily="serif"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/dob"
        android:paddingStart="15dp"
        android:inputType="text"/>


    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:id="@+id/edittext6"
        android:fontFamily="serif"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:hint="@string/location"
        android:paddingStart="15dp"
        android:inputType="text"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_change_password"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textColor="#0E0D0D"
        android:background="@drawable/gradient3"
        android:layout_marginTop="20dp"


        />

</LinearLayout>