<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:textColor="#ffff"
            android:textSize="28dp"
            android:layout_marginTop="7dp"
            android:paddingStart="15dp"/>
            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_downward_black_24dp"
                android:layout_marginLeft="245dp"
                android:layout_marginTop="07dp"/>
        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/old_password"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:textColor="#111010"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_old_password"
        android:paddingStart="10dp"
        />

    <TextView

        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/new_password"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:textColor="#111010"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_new_password"
        android:paddingStart="10dp"
        />
    <TextView

        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/confirm_password"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:textColor="#111010"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/retype_new_password"
        android:paddingStart="10dp"
        />

    <android.support.design.button.MaterialButton
        android:id="@+id/change_password"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:text="Change password"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/gradient3"
        android:textSize="20sp"/>

</LinearLayout>