<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccount"
    android:orientation="vertical"
    android:background="#B9BABE">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
            app:cardBackgroundColor="#0824C0"
        >

    </android.support.v7.widget.CardView>

     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:cardBackgroundColor="#0824C0"

         >

         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/profile"
             android:layout_marginTop="-50dp"
             android:layout_marginLeft="150dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Username"
             android:fontFamily="serif"
             android:textStyle="bold"
             android:textColor="#0E0D0D"
             android:textAlignment="center"
             android:textSize="30dp"
             android:layout_marginTop="60dp"
             android:layout_marginLeft="120dp"/>
     </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/my_orders"
            android:textSize="25sp"
            android:textColor="#1D1818"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
        />
        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginRight="37dp"
            android:layout_marginLeft="37dp"
            android:background="#424242">
        </View>

        <TextView
            android:id="@+id/order_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/view_all_orders"
            android:fontFamily="serif"
            android:textSize="20dp"
            android:textColor="#192FAF"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="190dp"
            android:paddingTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/help_centre"
            android:fontFamily="serif"
            android:textSize="25sp"
            android:textColor="#1D1818"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            />
        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginRight="37dp"
            android:layout_marginLeft="37dp"
            android:background="#424242">
        </View>

        <TextView
            android:id="@+id/help_centre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/go_to_centre"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:textColor="#192FAF"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="220dp"
            android:paddingTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/my_wishlist"
            android:fontFamily="serif"
            android:textSize="25sp"
            android:textColor="#1D1818"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            />
        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginRight="37dp"
            android:layout_marginLeft="37dp"
            android:background="#424242">
        </View>

        <TextView
            android:id="@+id/wishlist"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/go_to_wishlist"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:textColor="#192FAF"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="200dp"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/my_profile"
            android:fontFamily="serif"
            android:textSize="25sp"
            android:textColor="#1D1818"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            />
        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginRight="37dp"
            android:layout_marginLeft="37dp"
            android:background="#424242">
        </View>

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/go_to_profile"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:textColor="#192FAF"
            android:background="#ffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="220dp"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:text="@string/logout"
            android:textColor="#FAF6F6"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:textSize="25sp"
            android:backgroundTint="#424242"
            android:background="@drawable/curve_shape"/>

    </LinearLayout>

    </LinearLayout>