<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    


    <android.support.v7.widget.CardView
        android:id="@+id/product_card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:contentDescription="@string/prod_name"
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
              />

            <TextView
                android:id="@+id/product_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cambay_bold"
                android:text="@string/prod_brand"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/prod_name"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="17sp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_discount_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/prod_price"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_mrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/prod_mrp"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/product_discount_grid_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/prod_discount"
                    android:textAllCaps="false"
                    android:textColor="#FC0303"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/product_buy_button"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/buy"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>





</RelativeLayout>